--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@mdi/font": "^6.5.95",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.7.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.23",
+    "mapbox-gl": "^2.7.0",
     "material-design-icons-iconfont": "6.1.0",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
+    "vue-mapbox": "^0.4.1",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.7",
     "vuetify": "^2.4.0",
