--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@mdi/font": "^6.5.95",
+    "apexcharts": "^3.34.0",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "firebase": "^8.7.1",
@@ -19,9 +20,11 @@
     "material-design-icons-iconfont": "6.1.0",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.2",
     "vue-mapbox": "^0.4.1",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.7",
+    "vuetiful-board": "^0.3.5",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0",
     "vuex-persistedstate": "^4.1.0"
