--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jspdf-autotable": "^3.5.23",
     "mapbox-gl": "^2.7.0",
     "material-design-icons-iconfont": "6.1.0",
+    "moment": "^2.29.3",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.2",
