--- a/package.json
+++ b/package.json
@@ -44,5 +44,9 @@
     "vue-cli-plugin-vuetify": "~2.4.5",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
   }
 }
