--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apexcharts": "^3.34.0",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "firebase": "^8.7.1",
     "jspdf": "^2.5.1",
